# AviUtl2StyleEditor

./: README.md  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: ColorSection.vue  FontSection.vue  FormatSection.vue  LayoutSection.vue
